@@ -1,3 +1,11 @@
+2007-07-16  Luca Bruno  <lethalman88@gmail.com>
+
+	* syx/syx-memory.c: save object->is_constant in the image
+
+	* syx/syx-platform.h (syx_bswap_16): added
+	(SYX_COMPAT_SWAP_16): added
+	(SYX_COMPAT_SWAP_32): added
+
 2007-07-15  Luca Bruno  <lethalman88@gmail.com>
 
 	* syx/syx-platform.h (syx_bswap_32): wrap bswap_32
